--- a/packages.tex
+++ b/packages.tex
@@ -124,6 +124,7 @@
 \newcommand{\eg}{e.g., }
 \newcommand{\etc}{{etc.}\xspace}
 \newcommand{\ie}{i.e., }
+\newcommand{\etal}{\emph{et al.}}
 
 \usepackage{expl3}
 \usepackage{environ}
