--- a/ref.bib
+++ b/ref.bib
@@ -1487,7 +1487,13 @@ author = {{Chelsio Communications}},
   year={2011},
 }
 
-@inproceedings{sharedbottlenecks,
+@inproceedings{active-sharedbottlenecks,
+  title = {{Detecting Shared Congestion of Flows Via End-to-End Measurement}},
+  author = {Rubenstein, Dan and Kurose, Jim and Towsley, Don},
+  booktitle = {SIGMETRICS},
+  year = {2000},
+}
+@inproceedings{passive-sharedbottlenecks,
   title = {{A Passive Approach for Detecting Shared Bottlenecks}},
   author = {Katabi, Dina and Bazzi, Issam and Yang, Xiaowei},
   booktitle = {IEEE ICCCN},
