--- a/design.tex
+++ b/design.tex
@@ -25,11 +25,12 @@ Our overriding design principle is simplicity; at various points in the design, 
 Recall that each domain deploys one \name middlebox which we logically partition into sender-side (\inbox) and receiver-side (\outbox) functionality.
 
 \subsection{Key Insight}
-One strategy for inducing queuing at \name would be to set a low outgoing rate. 
+One strategy for inducing queuing at the \inbox would be to set a low outgoing rate limit on outgoing traffic. 
 However, if this rate is made smaller than the bundle's fair share of bandwidth at the bottleneck link in the network, it will decrease throughput. 
+Conversely, if the rate is too high, packets will pass through the \inbox without queueing.
 Instead, the rate needs to be set such that the bottleneck link sees a small queue while remaining fully utilized (and the bundled traffic competes fairly in the presence of cross traffic). 
 We make a simple, but powerful, observation: existing congestion control algorithms calculate exactly this rate~\cite{Jacobson88}. 
-Therefore, running such an algorithm to set a bundle's rate would reduce its self-inflicted queue at the bottleneck, causing packets to queue at \name instead, without reducing the bundle's throughput.
+Therefore, running such an algorithm to set a bundle's rate would reduce its self-inflicted queue at the bottleneck, causing packets to queue at the \inbox instead, without reducing the bundle's throughput.
 Note that end hosts would continue running a traditional congestion control algorithm as before (\eg Cubic~\cite{cubic}, BBR~\cite{bbr}) which is unaware of \name.
 
 Figure~\ref{fig:design:shift-bottleneck} illustrates this concept for a single flow traversing a bottleneck link in the network
@@ -37,18 +38,32 @@ Figure~\ref{fig:design:shift-bottleneck} illustrates this concept for a single f
 Without \name, packets from the end hosts are queued in the network, while the queue at the edge is unoccupied. 
 In contrast, a \name deployed at the edge is able to shift the queue to its \inbox.
 
+\subsection{Design Overview}\label{s:design:overview}
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{img/arch-block-diag}
+    \caption{\name comprises of five sub-systems: four (in green) implement \inbox functionality, one (in blue) implements \outbox functionality, and the datapath (orange) is shared between the two. \name's architecture supports multiple compatible implementations (listed in the ``Impl'' section of each block).}\label{fig:design:block-diag}
+\end{figure}
+Figure~\ref{fig:design:block-diag} shows the necessary components of any \name: (1) a means of determining bundle membership; (2) a rate enforcement mechanism; (3) a measurement strategy; (4) a delay-controller; and (5) a fairness-controller.
+Throughout this section we discuss design options for determining Bundle membership (\S\ref{s:design:membership}), observing feedback (\S\ref{s:design:twosided}), and congestion control (\S\ref{s:design:whichcc}): for other aspects of the design, \name is compatible with a variety of options. For example, domains can implement \name using any modern middlebox datapath, \eg P4~\cite{p4}, BESS~\cite{bess}, or as in our prototype implementation (\S\ref{s:impl}), Linux tc qdiscs.
+
+\an{maybe move congestion control choice before measurement?}
+
 \subsection{Indentifying Bundle Membership}\label{s:design:membership}
 \name must identify which packets (or flows) are part of the same traffic bundle.
 It is important to only bundle those flows which share the same bottleneck; otherwise, \name may send a component flow at the wrong rate for its bottleneck.
-This problem has seen previous study in the context of multipath TCP~\cite{mptcp} as well as passive approaches~\cite{sharedbottlenecks}.
+This has traditionally been a difficult problem; multipath TCP~\cite{mptcp} sidesteps it with a weighted window increase-decrease protocol, 
+and Rubenstein \etal~\cite{active-sharedbottlenecks} use a ``poisson-probing'' mechanism to probabilistically identify shared bottlenecks under a limited network model.
+
+\an{better transition?}
 We instead adopt a simple, direct, and more accurate approach: \emph{two-way opt-in}.
 In this approach, a domain must agree to bundle traffic on both the sending and receiving sides.
 The first step, of course, is to place a \name middlebox at the domain's edge.
 Initially, the \inbox assumes all component traffic is unbundled.
-When the \outbox observes an unbundled packet, it opts-in by sending a message containing the IP prefix it covers, addressed to the source IP of the packet
+When the \outbox observes an unbundled packet, it opts-in by sending a message \an{clarify not on every packet} containing the IP prefix it covers, addressed to the source IP of the packet
 \footnote{Addressing to the source IP of the packet is not strictly necessary; domains may also advertise \inbox{}es via \eg DNS.}.
 If there is no \inbox on the path, this message will be ignored.
-Otherwise, an \inbox will observe this message and can opt-in by initializing a new traffic bundle corresponding to the \outbox's destination prefix.
+Otherwise, a \inbox will observe this message and can opt-in by initializing a new traffic bundle corresponding to the \outbox's destination prefix.
 
 %The \outbox does one of two things for each potential epoch boundary packet:
 %\begin{enumerate}
@@ -84,6 +99,7 @@ Thus, we set aside TCP tunnels for the remainder of this discussion, but note th
 \paragrapha{Out-of-band feedback} Having eliminated the options for using in-band feedback, we adopt out-of-band feedback in the form of congestion-specific ACKs: the \outbox sends out-of-band feedback to the \inbox.
 This decouples congestion-specific ACKs from traditional ACKs used for reliability\footnote{The idea of a congestion ACK is similar to that in QCN~\cite{qcn}, although our goals differ.} and is thus indifferent to the underlying protocol (be it TCP, UDP, or QUIC).
 
+\an{move to ``measuring congestion''?}
 When should the \outbox send these feedback messages? 
 Sending an out-of-band feedback message for every packet arriving at the \outbox would result in high communication overhead. 
 Furthermore, conducting measurements on every outgoing packet at the \inbox would require maintaining state for each of them, which can be expensive, especially at high bandwidth-delay products. 
@@ -92,7 +108,7 @@ We therefore sample a subset of the packets for which to receive congestion ACKs
 
 We detail the sampling mechanism and contents of congestion ACKs in \S\ref{s:measurement}.
 
-\subsection{Choice of congestion control algorithm}
+\subsection{Choice of congestion control algorithm}\label{s:design:whichcc}
 \name's congestion control algorithm must satisfy the following requirements: 
 
 \paragraphi{(1) Ability to limit network queueing} \name must limit queueing in the network to move the queues to the \inbox. Therefore, congestion control algorithms which are designed to control delays, and thus queueing, are the appropriate choice. 
@@ -105,12 +121,3 @@ The emergence of such detection mechanisms is recent: Copa~\cite{copa} detects w
 \name uses the Nimbus detection mechanism because (1) it is more robust than Copa's and (2) it is compatible with any delay-controlling algorithm, including Copa, as shown in Figure~\ref{fig:eval:cc}.
 
 We discuss the mechanism for falling back to status quo performance in \S\ref{s:queue-ctl}.
-
-\subsection{Overview/Summary}
-\begin{figure}
-    \centering
-    \includegraphics[width=\columnwidth]{img/arch-block-diag}
-    \caption{\name comprises of five sub-systems: four (in green) implement \inbox functionality, one (in blue) implements \outbox functionality, and the datapath (orange) is shared between the two. \name's architecture supports multiple compatible implementations (listed in the ``Impl'' section of each block).}\label{fig:design:block-diag}
-\end{figure}
-As Figure~\ref{fig:design:block-diag} shows, the necessary components of any \name are: (1) a means of determining bundle membership; (2) a rate enforcement mechanism; (3) a measurement strategy; (4) a delay-controller; and (5) a fairness-controller.
-Throughout this section we have discussed design options for determining Bundle membership, observing feedback, and congestion control: for other aspects of the design, \name is compatible with a variety of options. For example, domains can implement \name using any modern middlebox datapath, \eg P4~\cite{p4}, BESS~\cite{bess}, or as in our prototype implementation (\S\ref{s:impl}), Linux tc qdiscs.
