--- a/bundler-nsdi20.tex
+++ b/bundler-nsdi20.tex
@@ -11,7 +11,7 @@
 \begin{document}
 \setlength{\droptitle}{-1.5cm}
 
-\title{\LARGE Taking Control of Your Traffic By Living on the Edge}
+\title{\LARGE Taking Control of Your Traffic By Living on the Edge \an{need boring title}}
 \author{Paper 45, \pageref{p:end} Pages}
 % TODO MAKE FINAL
 %Frank Cangialosi, 
